2003-09-10  Jani Monoses <jani@iv.ro>
	
	* cdl/flash_strata.cdl:
	* src/flash_lock_block.c (flash_lock_block): 
	* src/flash_unlock_block.c (flash_unlock_block): 
	* src/flash_erase_block.c (flash_erase_block): 
	* src/flash_query.c (flash_query): 
	* src/flash_program_buf.c (flash_program_buf): Use .2ram sections 
	for putting flash functions to RAM instead of the old method.
	
2003-05-02  Jani Monoses <jani@iv.ro>

	* src/strata.c: Switch to using generic flash_query_dev.
	The previous cache related changes broke flash_query for
	Strata because in the query case the generic flash driver was not
	called to handle the caches but the internal handling was removed
	nevertheless.
	
2003-04-04  Jani Monoses <jani@iv.ro>
	
	* src/strata.h:
	Use generic flash_dev.h for providing the FLASHWORD macro for
	different widths and device numbers.No reason to duplicate that
	here.This implicitely fixes the case when CYGNUM_FLASH_WIDTH is 16
	and CYGNUM_FLASH_DEVICES is 4.

2003-04-03  Jani Monoses <jani@iv.ro>

	* src/flash_lock_block.c (flash_lock_block): 
	* src/flash_unlock_block.c (flash_unlock_block): 
	* src/flash_erase_block.c (flash_erase_block): 
	* src/flash_query.c (flash_query): 
	* src/flash_program_buf.c (flash_program_buf): 
	Cache enabling and disabling are already handled by generic flash
	
2002-08-12  Mark Salter  <msalter@redhat.com>

	* src/flash_unlock_block.c: Add synchronous strataflash support.
	* src/strata.h: Add comments regarding synchronous strataflash.

2002-04-30  Christoph Csebits  <christoph.csebits@frequentis.com>

	* src/flash_unlock_block.c: Getting the current block lock
	state for flashes in 8-Bit mode is now working correctly.

2002-04-16  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/flash_strata.cdl: Invoke $(CC) with $(CFLAGS) to ensure the
        correct flags are passed.

2002-04-12  Gary Thomas  <gthomas@redhat.com>

	* src/strata.c: Clean up warnings.

2002-01-22  Mark Salter  <msalter@redhat.com>
